
option java_outer_classname="GetStreamLengthCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message GetStreamLengthCommand 
{
	optional string key = 1;
	optional string lockHandle = 2;
	optional int64 requestId = 3;
}